--- a/gb/23/10/27/n14104293.md
+++ b/gb/23/10/27/n14104293.md
@@ -1,17 +1,17 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/19920513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/19920513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/19920513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
-<tr><td VALIGN=TOP width="626"><h2 align=center>为何履历丢出去石沈大海？这些NG履历不要犯</h2>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<tr><td VALIGN=TOP width="626"><h2 align=center>为何履历丢出去石沉大海？这些NG错误不要犯</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2020/09/shutterstock_519537094-600x400.jpg" />
 <h6>传统格式的履历表简单明了，只要遵守几个简单的原则，比较能通过ATS筛选。（图/Shutterstock）
 </h6>
 <hr>
-	<p>【大纪元2023年11月01日讯】（英文大纪元记者Anne Johnson／余欣然编译）<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%89%BE%E5%B7%A5%E4%BD%9C.md#1">找工作</a>不是件轻松的事，既伤脑筋又充满挑战。如何向潜在雇主展示你的个人才华，涉及多方面因素。一份扎实的<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%B1%A5%E5%8E%86.md#1">履历</a>便是敲开就业大门的第一步。履历可以让你大方展现自己的相关经历，告诉招聘人员你才是这份工作的不二人选。</p>
-<p>面对雇主，这或许是你第一次，甚至是唯一一次闪闪发光的机会，因此正确书写<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E7%AE%80%E5%8E%86.md#1">简历</a>至关重要。只是，撰写简历也要留意一些陷阱。究竟哪些内容会对你不利？哪些不应该放进<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%B1%A5%E5%8E%86.md#1">履历</a>中呢？</p>
+	<p>【大纪元2023年11月01日讯】（英文大纪元记者Anne Johnson／余欣然编译）找工作不是件轻松的事，既伤脑筋又充满挑战。如何向潜在雇主展示你的才华，涉及多方面因素。一份扎实的履历便是敲开就业大门的第一步。履历可以让你大方展现自己的相关经历，告诉招聘人员你才是这份工作的不二人选。</p>
+<p>面对雇主，这或许是你第一次，甚至是唯一一次闪闪发光的机会，因此正确书写简历至关重要。只是，撰写简历也要留意一些陷阱。究竟哪些内容会对你不利？哪些不应该放进履历中呢？</p>
 <h2>招聘经理被履历淹没</h2>
-<p>平均一个职缺，招聘经理会收到250份履历，而其中只有2%有面试机会。多达90%的雇主使用求职者跟踪系统软件（ATS）来处理履历，也就是利用<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E4%BA%BA%E5%B7%A5%E6%99%BA%E8%83%BD.md#1">人工智能</a>（AI）筛选。</p>
+<p>平均一个职缺，招聘经理会收到250份履历，而其中只有2%有面试机会。多达90%的雇主使用求职者跟踪系统软件（ATS）来处理履历，也就是利用人工智能（AI）筛选。</p>
 <p>那些被筛掉的98%求职者，他们的履历到底错在哪里，以至于与梦寐以求的面试机会失之交臂呢？为何从一开始就惨遭淘汰？原因有很多。</p>
-<figure id="attachment_5798715" aria-describedby="caption-attachment-5798715" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2014/11/1402052350252483.jpg"><img class="size-large wp-image-5798715" src="https://i.epochtimes.com/assets/uploads/2014/11/1402052350252483-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-5798715" class="wp-caption-text">撰写一份完美的履历，以便获得面试的工作。（Fotolia)</figcaption></figure>
+<figure id="attachment_5798715" aria-describedby="caption-attachment-5798715" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2014/11/1402052350252483.jpg"><img decoding="async" class="size-large wp-image-5798715" src="https://i.epochtimes.com/assets/uploads/2014/11/1402052350252483-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-5798715" class="wp-caption-text">撰写一份完美的履历，以便获得面试的工作。（Fotolia)</figcaption></figure>
 <h2>履历应简短明了</h2>
 <p>履历不是自传。请简要介绍您的职业精华，包括公司名称、工作期间以及简短的工作概述。招聘人员能接受的理想长度为475-600字，大约是一页纸。如果你必须超过一页，可以写两页，但绝不能超过两页。</p>
 <p>如果你的职业生涯很长，只需列举过去15年的经历即可。招聘经理在意的是你最近的工作内容。</p>
@@ -19,12 +19,12 @@
 <p>你的职业经历不是刚刚才发生的事情，你需要描述你的“丰功伟业”，所以请使用行动字（action words）。</p>
 <p>这是你大显身手、给招聘经理留下深刻印象的机会。使用动作动词（action verbs）。例如，被动语态的句子“该项目由我管理”；用主动语态表达则是“我负责这个项目”。换句话说，就是大胆面对，“吹响”你的号角，凸显你的才能。</p>
 <h2>履历不要放大头照</h2>
-<p>履历附带个人照片可能招来歧视。如果他们对你的资历感兴趣，会到社交媒体上查看你的照片。避免初次<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%BA%94%E5%BE%81.md#1">应征</a>就展示你的照片给大家看，这不专业。</p>
+<p>履历附带个人照片可能招来歧视。如果他们对你的资历感兴趣，会到社交媒体上查看你的照片。避免初次应征就展示你的照片给大家看，这不专业。</p>
 <p>除非你想从事广播传媒行业，这种情况提交一张专业的大头照会比较合适。</p>
-<figure id="attachment_5805565" aria-describedby="caption-attachment-5805565" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2014/12/1409230538381664.jpg"><img class="size-large wp-image-5805565" src="https://i.epochtimes.com/assets/uploads/2014/12/1409230538381664-600x398.jpg" alt="" width="600" b="398" /></a><figcaption id="caption-attachment-5805565" class="wp-caption-text">职业目标（Career Objective）已不再流行。它只代表你想要什么，而不是你能为潜在雇主贡献什么。（Fotolia）</figcaption></figure>
+<figure id="attachment_5805565" aria-describedby="caption-attachment-5805565" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2014/12/1409230538381664.jpg"><img decoding="async" class="size-large wp-image-5805565" src="https://i.epochtimes.com/assets/uploads/2014/12/1409230538381664-600x398.jpg" alt="" width="600" b="398" /></a><figcaption id="caption-attachment-5805565" class="wp-caption-text">职业目标（Career Objective）已不再流行。它只代表你想要什么，而不是你能为潜在雇主贡献什么。（Fotolia）</figcaption></figure>
 <h2>“职业目标”已过时</h2>
 <p>职业目标已不再流行。它只代表你想要什么，而不是你能为潜在雇主贡献什么。</p>
-<p>写职业目标还会限制的你职业发展。如果你<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E7%AE%80%E5%8E%86.md#1">简历</a>中列出的目标跟所谋工作不完全匹配，那么你可能会失去面试机会。因为你在向招聘经理发出自己并不完全满意该职位的信号。没有人想雇用一个不满意这份工作的员工。</p>
+<p>写职业目标还会限制的你职业发展。如果你简历中列出的目标跟所谋工作不完全匹配，那么你可能会失去面试机会。因为你在向招聘经理发出自己并不完全满意该职位的信号。没有人想雇用一个不满意这份工作的员工。</p>
 <h2>省略私人信息</h2>
 <p>省略私人信息，如婚姻状况、子女、年龄或任何可能暗示你年龄的信息。因此，请将毕业日期从履历中删除，只显示过去 15 年的工作经历。</p>
 <p>在美国，评估提供个人信息的员工会招来平等就业机会委员会（EEOC）的关切。</p>
@@ -44,7 +44,7 @@
 <h2>没必要列高中文凭</h2>
 <p>履历写高中文凭只有你还在读大学时才有必要。一旦大学毕业，人们会认定你已获得高中文凭。否则您的大学文凭哪里来？</p>
 <p>列高中文凭只会占用履历宝贵的空间。而且坦白说，也没人在乎。</p>
-<figure id="attachment_12438167" aria-describedby="caption-attachment-12438167" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2020/09/shutterstock_781067875.jpg"><img class="size-large wp-image-12438167" src="https://i.epochtimes.com/assets/uploads/2020/09/shutterstock_781067875-600x415.jpg" alt="履历, 求职, 找工作" width="600" b="415" /></a><figcaption id="caption-attachment-12438167" class="wp-caption-text">用心制作了很多图表的履历表虽然有创意，但很难通过ATS的筛选。（图/Shutterstock)</figcaption></figure>
+<figure id="attachment_12438167" aria-describedby="caption-attachment-12438167" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2020/09/shutterstock_781067875.jpg"><img decoding="async" class="size-large wp-image-12438167" src="https://i.epochtimes.com/assets/uploads/2020/09/shutterstock_781067875-600x415.jpg" alt="履历, 求职, 找工作" width="600" b="415" /></a><figcaption id="caption-attachment-12438167" class="wp-caption-text">用心制作了很多图表的履历表虽然有创意，但很难通过ATS的筛选。（图/Shutterstock)</figcaption></figure>
 <h2>删除图像或奇怪的格式</h2>
 <p>不要使用图表或任何图像。你可能想把简历打扮得漂漂亮亮的，但请克制这种冲动。如果ATS（求职者跟踪系统软件）无法判别这类文件，可能就把你的履历筛出去了。</p>
 <p>招聘人员通常会使用软件扫描履历中的关键字，比较你的资历与职位描述的相似度。履历中没有图像，扫描软件捕捉到你所有关键字的概率就会提高。</p>
@@ -56,7 +56,7 @@
 <p>反复检查简历两到三遍，注意有无拼写和语法错误。没什么比错别字更快将你淘汰出局了。它告诉对方你不在乎这份工作，不注重细节。</p>
 <p>请朋友或家人阅读您的履历。将履历打印出来或大声朗读都有助于您发现错误和不对劲的地方。</p>
 <h2>不准确的信息或谎言</h2>
-<p>你可以为<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%BA%94%E5%BE%81.md#1">应征</a>的职位量体裁衣定制简历，但请不要撒谎，半真半假的内容也不要掺。不准确的误导性信息早晚会给你带来麻烦。</p>
+<p>你可以为应征的职位量体裁衣定制简历，但请不要撒谎，半真半假的内容也不要掺。不准确的误导性信息早晚会给你带来麻烦。</p>
 <p>许多招聘经理都会留意那些资历不完全匹配但接近职位要求的人。所以，不必在早期筛选阶段过于美化自己。</p>
 <p>如果你在简历中撒谎且被录用，一旦真相大白，你可能会被解雇。</p>
 <h2>避免长篇大论</h2>
@@ -76,35 +76,33 @@
 <p>责任编辑：茉莉</p>
 	
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/14/12/14/n4318337.md#1">成功的求职简历 这6个信息一定要有</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/16/2/11/n4637817.md#1">正在求职？简历上绝对要有的八项资料</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/19/11/2/n11628492.md#1">廖祖笙：我的求职简历</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/1/1/n13474706.md#1">让求职简历脱颖而出的八个有效方法</a></li>
-<hr>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/14/12/14/n4318337.md#1">成功的求职简历 这6个信息一定要有</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/16/2/11/n4637817.md#1">正在求职？简历上绝对要有的八项资料</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/19/11/2/n11628492.md#1">廖祖笙：我的求职简历</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/22/1/1/n13474706.md#1">让求职简历脱颖而出的八个有效方法</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank">印度媒体报道东方</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/18/10/28/n10813474.md#1" target="_blank">大饥荒是中共有计划的屠杀手段（上）</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/16/7/18/n8113015.md#1" target="_blank">融入东方智慧 西人健康顾问获提振</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank">藏字石 蕴天机</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/11/7/n10834918.md#1" target="_blank">曾伯炎：杀母红卫兵孔繁路的悲剧</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/17/12/5/n9927251.md#1" target="_blank">澄清长江日报诽谤文章 武汉退休干部的故事</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/25/n14102423.md#1">托斯卡纳温泉村出土青铜雕像：改写历史的新发现</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/23/n14101380.md#1">【未解之谜】朵洛莉丝催眠故事（3）跨越400年的视频？！</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/22/n14100508.md#1">唐玄宗射箭中飞鹤  见证道人化鹤功夫</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/26/n14103809.md#1">【未解之谜】朵洛莉丝催眠故事（4）人类至关重要的10年</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/18/n14097576.md#1">【古道人生】涂了道士给的眼药后能见到鬼的人</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/31/n14107064.md#1">【十字路口】上海万圣夜喷中共 习陷三大困境</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/31/n14106804.md#1">【晚间新闻】李克强逝前被软禁？ 东郊宾馆独家内幕</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/31/n14106805.md#1">【全球新闻】民间藉悼念对当局表不满 高层藉李克强内斗</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/29/n14105220.md#1">李克强去世震动中南海 传反习派准备习接班人</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/30/n14105821.md#1">李克强去世 消息：北京处于半戒严状态</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/30/n14105755.md#1">刊登李克强讣告 中国媒体出现异常</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/29/n14105510.md#1">香港武打演员孟海出殡 洪金宝拄着拐杖送别</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/30/n14106287.md#1">现身香港与周润发同框 汤唯受访粤语超流利</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/29/n14105559.md#1">曾演多部红片 《五朵金花》男主角莫梓江离世</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/30/n14106381.md#1">因嫖娼遭封杀两年 李云迪在澳洲复出巡演</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/29/n14105167.md#1">迪士尼真人《白雪公主》 公开大头小矮人影像</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/20/n14077833.md#1">你的病痛 可能都是脊椎造成的</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/29/n14105274.md#1">鸡蛋存放在哪里最好？ 有主厨这么说</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/30/n14105924.md#1">在地球深处形成 钻石如何出现在地表？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/30/n14106035.md#1">加州住房危机 这个城市被指“头号麻烦”</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/13/n14094680.md#1">忧郁症是缺营养？2种饮食、6种营养让你吃出快乐</a></li>
-<hr>
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/10/27/n14104293.htm">为何履历丢出去石沈大海？这些NG履历不要犯</a></p><hr>
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104293.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/3/n14405103.md#1">稀奇古怪的转生故事二则：人未死魂已转生猪 死后变猪又回到人身</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/16/n14414547.md#1">前美军特种兵曝曾在地下设施见过外星科技</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/21/2/6/n12737786.md#1">【元曲大家】江南才子徐再思 写尽相思意</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/14/n14413009.md#1">尾牙寻古：祭祀土地公从何时开始？传说中土地公如何成神？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/17/n14416009.md#1">【未解之谜】皮行者牧场（一）：美国境内的时空门？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/20/n14418141.md#1">【环球直击】川普就职后计划发布逾百行政命令</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/21/n14418447.md#1">【时事金扫描】川普就职扫描 行政令波及华人</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/20/n14418138.md#1">【中国禁闻】新疫情爆发 网曝大量死亡案例</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/18/n14416577.md#1">大陆多地爆发新一波疫情 网曝大量死亡信息</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/19/n14416856.md#1">中芯甩卖28纳米芯片 分析：或为驱动“内循环”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/29/n14400418.md#1">加州绿蟹令人头疼 生态难题被毛茸茸的它解决</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/19/n14416718.md#1">泰缅边境失联模特杨泽琪获救 指甲被拔引关注</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/20/n14418338.md#1">刀郎落榜多个音乐奖 被称演艺界“罗刹海市”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/18/n14416567.md#1">传洛杉矶豪宅被损毁 央视名导张纪中赴美处理</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/18/n14416632.md#1">扛不起天价违约金？赵露思休养不足一月复工</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/21/n14418418.md#1">真人《魔发奇缘》公主 弗萝伦丝普伊是热门人选</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/10/n14410842.md#1">人偏肺病毒感染高发 病毒专家教你怎样应对</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/15/n14414131.md#1">如何找到冬季的隐藏之光 保持健康</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/11/n14410940.md#1">食物与心灵存在秘密连结 吃对了情绪才好</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/20/n14417919.md#1">戒酒一个月后身心有何惊人变化？ 专家释疑</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/14/n14412910.md#1">高血压患者的急救、养生、茶饮及运动</a></li>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/10/27/n14104293.htm">为何履历丢出去石沉大海？这些NG错误不要犯</a></p><hr>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/23/10/27/n14104293.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
